# laikago_ros

./: .gitignore
laikago_controller/: CMakeLists.txt
laikago_controller/include/: body.h  body_estimation.h  controller.h  eigen_def.h  kinematics.h  qp_solver.h
laikago_controller/matlab/: genKinematics.m  genQpSolver.m  getFolderPath.m  setPath.m
laikago_controller/matlab/draft/: test_softmax.m
laikago_controller/src/: body.cpp  body_estimation.cpp  controller.cpp  kinematics.cpp  qp_solver.cpp
laikago_description/launch/: check_joint.rviz
laikago_description/robot/: robot.urdf
laikago_description/xacro/: robot.xacro
laikago_gazebo/: CMakeLists.txt
laikago_gazebo/launch/: gazebo.xacro  normal.launch  robot.launch
laikago_gazebo/src/: body.cpp  body_estimation.cpp  body_estimation.h  controller.cpp  controller.h  kinematics.cpp  kinematics.h
laikago_gazebo/src/exe/: servo.cpp
laikago_gazebo/src/matlab/: casadiGen.m  genKinematics.m
laikago_msgs/: CMakeLists.txt
laikago_msgs/msg/: ControlState.msg  GainParam.msg  PDgain.msg  WorldState.msg
laikago_real/: CMakeLists.txt
laikago_real/nvidia/: CMakeLists.txt  test_casadi.cpp  walking.cpp
laikago_real/nvidia/include/: state_estimation.h
laikago_real/nvidia/src/: neutral_mode_high.cpp  neutral_mode_low.cpp  sensor_readings.cpp  stance.cpp  test_casadi.cpp  walking.cpp
